# medium

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  pyproject.toml  pyrightconfig.json  run
core/apps/articles/: models.py
core/tests/: conftest.py
core/tests/apps/user/endpoints/: test_auth.py
core/tests/apps/user/fixtures/: __init__.py  client.py  user_instances.py
core/tests/apps/user/model/behavioral/: test_factory_behaviors.py  test_model_behaviors.py
core/tests/apps/user/model/structural/: test_model_structure.py
core/tests/apps/user/serializers/: test_serializers.py
core/tests/articles/fixtures/: __init__.py  factories.py
core/tests/articles/model/behavior/: test_article_model_behaviors_successful.py
core/tests/articles/model/structure/: test_article_model_structures.py
core/tests/articles/unittests/: test_article_read_time_engine_successful.py
core/tests/fixtures/: __init__.py
core/tests/user/end_to_end/: test_user_allauth.py
core/tests/user/endpoints/: test_user_views.py
core/tests/user/fixtures/: __init__.py  user_instances.py
core/tests/user/serializers/: test_serializers.py
