[tool.poetry]
name = "medium"
version = "0.1.0"
description = ""
authors = ["Furthermore <wrbyepcr11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-split-settings = "^1.3.1"
psycopg2 = "^2.9.9"
django = "^5.0.6"
djangorestframework = "^3.15.1"
gunicorn = "^22.0.0"
drf-spectacular = "^0.27.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
pillow = "^10.4.0"
django-filter = "^24.2"
whitenoise = "^6.7.0"
colorlog = "^6.8.2"
django-mptt = "^0.16.0"
django-autoslug = "^1.9.9"
django-countries = "^7.6.1"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.44"
argon2-cffi = "^23.1.0"
pytz = "^2024.1"
django-taggit = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest-html = "^4.1.1"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
selectolax = "^0.3.21"
pytest-factoryboy = "^2.7.0"
pytest-sugar = "^1.0.0"
pygments = "^2.18.0"
sqlparse = "^0.5.1"
ruff = "^0.6.3"


# [tool.ruff]
# per-file-ignores = {
#     "core/settings/*.py" = ["F821"]
# }


# [tool.isort]
# profile = "black"
# line_length = 119
# use_parentheses = true
# multi_line_output = 3
# force_grid_wrap = 0
# include_trailing_comma = true
# ensure_newline_before_comments = true
# known_first_party = ["core"]  # Replace 'core' with your actual application name(s)
# known_third_party = ["decimal"]
# known_django = [
#     "django",
#     "rest_framework",
#     "rest_framework_simplejwt",
# ]
# known_test = [
#     "pyest",
#     "faker",
# ]
# sections = [
#     "STDLIB",
#     "DJANGO",
#     "THIRDPARTY",
#     "TEST",
#     "FIRSTPARTY",
#     "LOCALFOLDER",
# ]
# default_section = "THIRDPARTY"
# force_sort_within_sections = true

# [tool.yapf]
# based_on_style = "google"
# align_closing_bracket_with_visual_indent = true
# # coalesce_brackets = false
# column_limit = 119
# dedent_closing_brackets = true

# [tool.flake8]
# ignore = "C101, Q000"
# exclude = [".git", "__pycache__", "docs/source/conf.py", ".venv", "*/migrations/*"]
# per-file-ignores = [ 
#     "core/settings/__init__.py: F821",
#     "core/project/settings/base.py: F821",
#     "local/settings.local.py: F821",
#     "core/settings/project.py: F821",
#     "core/tests/product/fixtures/__init__.py: F405, F403",
# ]
# filename = "*.py"
# accept-encodings = "utf-8"
# max-complexity = 10
# max-line-length = 119
# max-linenumber = 500
# inline-quotes = "single"
# multiline-quotes = "double"
# application-import-names = "core"

[tool.pytest.ini_options]
django_find_project = false
pythonpath = "."
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = "test_*.py"
testpaths = ["core"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::pytest.PytestCacheWarning"]
markers = [
    "model: tests for model", 
    "model_structure: tests for model structure."
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "core/settings/*",
    "*/conftest.py",
    "core/manage.py"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
